--- a/chatMessages/css/chatbox.css
+++ b/chatMessages/css/chatbox.css
@@ -1,3 +1,7 @@
+html, body
+{
+    height: 100vh;
+}
 div.container-width{
     width: 78%;
 }
@@ -27,9 +31,22 @@ div.col-margin{
     text-align: center; 
     height: 14px;
     border-bottom: 1px solid rgba(220, 220, 220, 0.589); 
-    margin: 10px 0 20px; 
+    margin: 0 0 10px; 
 }
 #msg-date{
     background-color: white; 
     padding:0 10px;
+}
+#msg-profile-pic{
+    margin-top: 0;
+    width: 50px;
+    height: 50px;
+}
+#send{
+    padding: 0.1em 0.95em;
+}
+#msg-textarea{
+    resize: none;
+    border-radius: 0;
+    border-top: 2px solid gainsboro;
 }
