--- a/chatMessages/css/chatbox.css
+++ b/chatMessages/css/chatbox.css
@@ -53,3 +53,13 @@ div.col-margin{
 #msg-summary-tab{
     border-bottom: 1px solid gray;
 }
+#msg-summary-profile-pic{
+    margin-top: 0;
+    width: 70px;
+    height: 70px;
+}
+#search-msg-bar{
+    background-color: rgb(231, 232, 239);
+    border-radius: 0.2em;
+    border: none;
+}
