--- a/chatMessages/css/theme.css
+++ b/chatMessages/css/theme.css
@@ -12,6 +12,9 @@
 .helv-reg{
     font-family: "Helvetica-regular";
 }
+.fs-5-5{
+    font-size: 1.05em;
+}
 .fs-7{
     font-size: 0.9em;
 }
@@ -21,6 +24,11 @@
 .fs-9{
     font-size: 0.75em;
 }
+/* 
 p.height{
+    height: 1.5em;
+}
+ */
+.height{
     height: 1.5em;
 }
