--- a/css/chatbox.css
+++ b/css/chatbox.css
@@ -1,7 +1,3 @@
-html, body
-{
-    height: 100vh;
-}
 div.container-width{
     width: 78%;
 }
@@ -10,6 +6,12 @@ div.col-27-5{
 }
 div.col-margin{
     margin-right: 3%; 
+}
+div.h-10 {
+    height: 8%;
+}
+div.h-90{
+    height: 92%;
 }
 #header-profile-pic{
     padding-top: 0.1em;
